test/fail/t_indep_bool.zc
bound_succ
  [ b <-$ Bool;
  ] : b = false.
  indep.
(*
ERROR: indep: Adv judgment expected
*)